--- a/responsive.css
+++ b/responsive.css
@@ -41,9 +41,55 @@ transition: 0.75s;}
   background-color:
    rgba(197, 194, 27, 0.715);}   
 
+   #click{display: none;}
+
+   .btn-click{color: white;
+  font-size: 25px;
+cursor: pointer;
+display: none;}
+
+   /* Navbar reponsive start */
+
+   @media only screen and (max-width: 940px) { nav ul{position: fixed;
+  margin-top:  42px;
+  background-color: rgb(19, 26, 33);
+  height: 100vh;
+  width: 100%;
+  left: 100%;
+  padding-top: 20px;
+  flex-direction: column;
+  align-items: center;
+   transition: all 1.170s ease;
+  
+}
+.btn-click{display: block;}
+#click:checked ~ ul{left: 0%;}
+
+#click:checked ~ .btn-click i::before{
+  content: "\f654";
+  color: red;
+}
 
 
 
+nav ul li{
+  margin: 30px;
+  font-size: 18px;
+ 
+}
+
+nav ul li a:hover{
+  background: none;
+  color: red;
+}
+
+
+    
+   }
+
+
+
+ 
 
 
 
